fix: truncate ContentSwitcher buttons with an ellipsis

--- a/packages/pelagos/src/components/ContentSwitcher.less
+++ b/packages/pelagos/src/components/ContentSwitcher.less
@@ -11,11 +11,11 @@
 
 		&__button {
 			@focus-visible();
+			@ellipsis();
 			position: relative;
 			height: 32px;
 			padding: 0 @sp-16;
 			text-align: start;
-			white-space: nowrap;
 			color: var(--text-secondary);
 			background-color: transparent;
 			border: none;
